--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "dependencies": {
         "@mdi/font": "^6.6.96",
         "material-design-icons-iconfont": "^6.6.0",
+        "vee-validate": "^2.2.15",
         "vue-bus": "^1.2.1",
         "vue-router": "^3.5.3",
         "vuetify": "^2.6.0"
     },
     "devDependencies": {
         "@popperjs/core": "^2.10.2",
+        "autoprefixer": "^10.4.7",
         "axios": "^0.21",
         "bootstrap": "^4.0.0",
         "deepmerge": "^4.2.2",
@@ -25,10 +27,11 @@
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "popper.js": "^1.12",
-        "postcss": "^8.1.14",
+        "postcss": "^8.4.13",
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0",
+        "tailwindcss": "^3.0.24",
         "vue": "^2.6.12",
         "vue-cli-plugin-vuetify": "~2.4.8",
         "vue-loader": "^15.9.8",
