--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "material-design-icons-iconfont": "^6.6.0",
         "vee-validate": "^2.2.15",
         "vue-bus": "^1.2.1",
+        "vue-material": "^1.0.0-beta-15",
         "vue-router": "^3.5.3",
         "vuetify": "^2.6.0"
     },
